line height fixes to avoid cropping lower extensions label changes

--- a/src/app/shared/styles/material/mat-form.scss
+++ b/src/app/shared/styles/material/mat-form.scss
@@ -5,6 +5,7 @@
     font-size: 1em !important;
     .mat-input-element {
         caret-color: $dark-grey-color !important;
+        line-height: 1;
     }
 
     &.mat-form-field-invalid {
